--- a/.github/workflows/selenium-download.yml
+++ b/.github/workflows/selenium-download.yml
@@ -35,6 +35,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -r webhook_requirements.txt
     
     - name: Create result_files directory
       run: mkdir -p result_files
@@ -53,6 +54,11 @@ jobs:
       env:
         CHROME_BIN: /usr/bin/google-chrome
         CHROMEDRIVER: /usr/bin/chromedriver
+    
+    - name: Update webhook results
+      run: |
+        echo "Updating webhook with latest results..."
+        python update_webhook_results.py
     
     - name: Check for new files
       id: check_files
