--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
+flask==2.3.3
+requests==2.31.0
 selenium==4.15.2
 chromedriver-autoinstaller==0.6.2
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
-google-api-python-client==2.108.0
-dropbox==11.36.2
-requests==2.31.0
