Update workflow to support webhook triggers and fix webhook to use repository_dispatch

--- a/.github/workflows/selenium-download.yml
+++ b/.github/workflows/selenium-download.yml
@@ -6,6 +6,8 @@ on:
     branches: [ main ]
     paths:
       - 'selenium_download.py'
+  repository_dispatch:
+    types: [webhook-trigger]
 
 jobs:
   selenium-download:
